# u-siem-core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: err.rs  lib.rs  prelude.rs
src/components/: actuator.rs  alert.rs  command.rs  command_types.rs  common.rs  dataset.rs  enrichment.rs  kernel_message.rs  metrics.rs  mitre.rs  mod.rs  parsing.rs  simplified.rs  soar.rs  storage.rs  task.rs  use_case.rs
src/components/dataset/: README.md  calendar.rs  geo_ip.rs  holder.rs  i18n.rs  ip_map.rs  ip_map_list.rs  ip_net.rs  ip_set.rs  mod.rs  rules.rs  text_map.rs  text_map_list.rs  text_set.rs
src/components/dataset/geo_ip/: fast.rs  mod.rs  slow.rs
src/components/datasets/: ip_net.rs  mod.rs
src/components/metrics/: counter.rs  gauge.rs  histogram.rs  mod.rs  prometheus.rs  summary.rs
src/components/query/: README.md  mod.rs
src/components/rule/: 7zip_sigma_rule.yml  c2_sigma_rule.yml  mod.rs  sigma.rs  simple_sigma_rule.yml
src/datasets/: README.md
src/events/: README.md  auth.rs  base_schema.rs  common.rs  dhcp.rs  dns.rs  event.rs  field.rs  field_dictionary.rs  firewall.rs  ifield.rs  intrusion.rs  ip.rs  log.rs  mod.rs  protocol.rs  schema.rs  tags.rs  webproxy.rs  webserver.rs
src/logging/: README.md  macros.rs  mod.rs
src/testing/: mod.rs  parsers.rs
src/utilities/: http_utils.rs  ip_utils.rs  mac.rs  mod.rs  rule_selector.rs  types.rs
tests/: macros.rs
