[package]
name = "u-siem"
version = "0.0.38"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "A framework to build custom SIEMs"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs"]
categories = ["security"]
edition = "2018"

[lib]
name = "usiem"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = { version = "0.5" }
chrono = "0.4"