[package]
name = "u-siem"
version = "0.2.1"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "A framework for building custom SIEMs"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs"]
categories = ["parsing"]
edition = "2021"

[lib]
name = "usiem"
path = "src/lib.rs"

[[test]]
name = "macros"
path = "tests/macros.rs"
harness = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = { version = "0.5" }
chrono = "0.4"
dyn-clone = "1.0"
regex = "1"
lazy_static = "1"


[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
serde_yaml = "0"